tests/lime/fail/tokens/label_rest/byte_46.wsa
jmp .l. .l.: push 46
